added license information in composer.json

--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,8 @@
 
     },
     "type": "magento2-module",
-    "version": "0.1.1",
-    "license": [
-
-    ],
+    "version": "0.1.2",
+    "license": "OSL 3.0",
     "autoload": {
         "files": [
             "registration.php"
