--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
-        
+        "magento/framework": "100.0.*",
         "magento/magento-composer-installer": "*"
     },
     "suggest": {
