--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "msp/cmsimportexport",
     "description": "",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/framework": "100.0.*",
+        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
+        "magento/framework": "100.*",
         "msp/common": "*",
         "magento/magento-composer-installer": "*"
     },
