--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "msp/cmsimportexport",
     "description": "",
     "require": {
-        "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
+        "php": "7.0.2|7.0.4|~7.0.6",
         "magento/framework": "100.1.*",
         "msp/common": "*",
         "magento/magento-composer-installer": "*"
@@ -11,7 +11,6 @@
 
     },
     "type": "magento2-module",
-    "version": "0.1.4",
     "license": "OSL 3.0",
     "autoload": {
         "files": [
