--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "msp/cmsimportexport",
     "description": "",
     "require": {
-        "php": ">=7.0.2 <7.2",
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1",
         "magento/framework": "100.1.*|100.2.*|101.0.*",
         "msp/common": "*",
         "magento/magento-composer-installer": "*"
