--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,14 @@
     "name": "msp/cmsimportexport",
     "description": "",
     "require": {
-        "magento/framework": "100.1.*|100.2.*|101.0.*",
         "msp/common": "*",
         "magento/magento-composer-installer": "*"
     },
-    "suggest": {
-
-    },
     "type": "magento2-module",
-    "license": "OSL-3.0",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -20,4 +19,3 @@
         }
     }
 }
-
